--- a/contacts.html
+++ b/contacts.html
@@ -264,7 +264,7 @@ function MM_swapImage() {
 </div>
 </TD>
 <TD width=137><div class="wpmd">
-<div><font class="ws8" face="Tahoma"></font></div>
+<div><font class="ws8" face="Tahoma">prakriti89@gmail.com</font></div>
 </div>
 </TD>
 <TD width=63><div class="wpmd">
